Fix overflow in Leads page

--- a/src/views/Leads/styles.scss
+++ b/src/views/Leads/styles.scss
@@ -53,6 +53,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        overflow: auto;
     }
 
     .fixed-tabs {
